--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Pages/HomePage.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Pages/HomePage.xaml
@@ -8,6 +8,7 @@
       xmlns:vm="clr-namespace:Wp.WpfDemo.UIL.ViewModels.Pages"
       xmlns:uc="clr-namespace:Wp.WpfDemo.UIL.Views.UserControls"
       xmlns:hc="https://handyorg.github.io/handycontrol"
+      xmlns:wpc="clr-namespace:Wp.WpfDemo.WpThemes;assembly=Wp.WpfDemo.WpThemes"
       mc:Ignorable="d"
       Title="HomePage"
       d:DesignHeight="966"
@@ -97,7 +98,9 @@
                     </materialDesign:Card>
                     <StackPanel Grid.Column="2"
                                 Grid.Row="0"
-                                Orientation="Horizontal">
+                                Orientation="Vertical"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center">
                         <TextBlock Text="旋转"
                                    x:Name="TestRender"
                                    Cursor="Hand"
@@ -183,7 +186,6 @@
                                     </BeginStoryboard>
                                 </EventTrigger>
                             </TextBlock.Triggers></TextBlock>-->
-                        <uc:RollingNumber />
                     </StackPanel>
                     <Image Source="/Resources/Naruto0.jpg"
                            Grid.Row="1"
@@ -198,6 +200,7 @@
                     </Image>
                     <StackPanel Grid.Column="1"
                                 Grid.Row="1"
+                                VerticalAlignment="Center"
                                 Background="White">
                         <RadioButton IsChecked="{Binding TestRadioButton ,Mode=TwoWay, Converter={StaticResource radioButtonConverter},ConverterParameter=0}"
                                      Content="参数1" />
@@ -277,7 +280,7 @@
                         <Grid Grid.Row="0"
                               x:Name="TestPrinter">
                             <TextBlock Text="TestPrinter"
-                                       FontSize="100" />
+                                       FontSize="70" />
                         </Grid>
                         <Button Grid.Row="1"
                                 Background="LightBlue"
@@ -286,6 +289,9 @@
                                 Height="auto"
                                 Click="Button_Click" />
                     </Grid>
+                    <wpc:CustomControl1 Grid.Column="2"
+                                        Grid.Row="2"
+                                        TestColor="Red" />
                 </Grid>
             </hc:TabItem>
             <hc:TabItem Header="滚动数字">
